# fast_example

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  codeql.yaml
app/: main.py
app/api/v1/: api_account.py  api_mall.py  api_user.py
app/core/: config.py  logging_core.py
app/db/: schema.py
app/models/: account.py  user.py
app/resources/static/: site.webmanifest
app/resources/templates/: error.html  layout.html
app/services/: account_service.py  mall_service.py  user_service.py
tests/: conftest.py  set_test_db.py  test_outside_api.py
tests/api/: test_api.py
tests/api/v1/: test_account.py  test_mall.py  test_user.py
tests/db/: test_schema.py
tests/services/: test_account_service.py  test_mall_service.py
