[project]
name = "fast-example"
version = "0.1.0"
description = "Simple example of a FastAPI application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
